--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,30 @@
-# Prerequisites
-*.d
+# Gradle files
+.gradle/
+build/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Log/OS Files
+*.log
 
-# Precompiled Headers
-*.gch
-*.pch
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# IntelliJ
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
 
-# Fortran module files
-*.mod
-*.smod
+# Keystore files
+*.jks
+*.keystore
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# Google Services (e.g. APIs or Firebase)
+google-services.json
 
-# Executables
-*.exe
-*.out
-*.app
+# Android Profiling
+*.hprof
