--- a/Asgmt-1/app/src/main/AndroidManifest.xml
+++ b/Asgmt-1/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${AIzaSyBUrf0QTaTgA2pWIj21SSlVTjslalOYOhs}" />
+            android:value="AIzaSyBUrf0QTaTgA2pWIj21SSlVTjslalOYOhs" />
 
         <activity
             android:name=".MapsActivity"
