--- a/Asgmt-1/app/src/main/AndroidManifest.xml
+++ b/Asgmt-1/app/src/main/AndroidManifest.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="se.mau.aj9191.assignment_1">
-
+	
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
